# deflect-one

./: README.md  __init__.py  cli.py  deflect.py  pyproject.toml
.github/: FUNDING.yml  publish.yml
.github/workflows/: publish.yml
